# bluez-alsa

./: configure.ac
src/: Makefile.am
src/spa/: Makefile.am  defs.h  device.c  monitor.c  plugin.c
